# ipatool-rs

./: .gitignore  .gitmessage  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  dist-workspace.toml
.githooks/: commit-msg
.github/scripts/: extract-release-notes.sh  package-unix.sh  package-windows.ps1
.github/workflows/: ci.yml  release.yml
crates/ipatool-cli/: Cargo.toml
crates/ipatool-cli/src/: main.rs  output.rs
crates/ipatool-cli/src/commands/: auth.rs  download.rs  mod.rs  purchase.rs  search.rs  version.rs
crates/ipatool-cli/src/tui/: action.rs  app.rs  event.rs  handler.rs  mod.rs  theme.rs
crates/ipatool-cli/src/tui/tabs/: account.rs  download.rs  library.rs  mod.rs  search.rs
crates/ipatool-core/: Cargo.toml
crates/ipatool-core/src/: credential.rs  error.rs  guid.rs  lib.rs
crates/ipatool-core/src/api/: auth.rs  bag.rs  download.rs  lookup.rs  mod.rs  purchase.rs  reauth.rs  search.rs  versions.rs
crates/ipatool-core/src/client/: cookie_jar.rs  mod.rs  plist_xml.rs
crates/ipatool-core/src/ipa/: mod.rs  partial_zip.rs  patch.rs
crates/ipatool-core/src/model/: account.rs  app.rs  mod.rs  platform.rs  storefront.rs
