[workspace]
resolver = "3"
members = ["crates/ipatool-core", "crates/ipatool-cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
