[workspace]
resolver = "3"
members = ["crates/ipatool-core", "crates/ipatool-cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-input = "0.15"
tokio-util = { version = "0.7", features = ["rt"] }
